--- a/app/src/main/res/drawable/unchecked.xml
+++ b/app/src/main/res/drawable/unchecked.xml
@@ -9,7 +9,7 @@
             android:viewportHeight="7">
             <path
                 android:name="path_1"
-                android:fillColor="#ff0000"
+                android:fillColor="#ffffff"
                 android:fillType="evenOdd"
                 android:pathData="M 3.439 0 C 2.527 0 1.652 0.363 1.007 1.007 C 0.72 1.294 0.49 1.626 0.322 1.987 C 0.112 2.438 0 2.933 0 3.439 C 0 4.043 0.159 4.636 0.46 5.159 C 0.762 5.682 1.197 6.116 1.719 6.418 C 2.242 6.72 2.835 6.879 3.439 6.879 C 4.351 6.879 5.227 6.516 5.871 5.872 C 6.516 5.227 6.879 4.351 6.879 3.439 C 6.878 2.954 6.775 2.475 6.576 2.032 C 6.406 2.202 6.235 2.373 6.065 2.543 C 5.895 2.713 5.725 2.883 5.554 3.054 C 5.384 3.224 5.214 3.394 5.043 3.564 C 4.873 3.735 4.703 3.905 4.533 4.075 C 4.362 4.246 4.192 4.416 4.022 4.586 C 3.852 4.756 3.681 4.927 3.511 5.097 C 3.474 5.135 3.431 5.164 3.386 5.185 C 3.357 5.198 3.327 5.208 3.296 5.214 C 3.267 5.221 3.238 5.224 3.208 5.224 C 3.165 5.224 3.122 5.217 3.08 5.204 C 3.052 5.196 3.024 5.184 2.998 5.169 C 2.964 5.15 2.932 5.126 2.903 5.097 C 2.43 4.624 1.957 4.151 1.484 3.678 C 1.316 3.51 1.316 3.239 1.484 3.07 C 1.653 2.902 1.924 2.902 2.092 3.07 C 2.464 3.442 2.835 3.813 3.207 4.185 C 3.973 3.419 5.044 2.348 6.114 1.278 C 5.792 0.879 5.384 0.557 4.921 0.336 C 4.459 0.115 3.952 0 3.439 0 Z"
                 android:strokeWidth="1" />
@@ -38,8 +38,8 @@
                     android:interpolator="@android:anim/accelerate_interpolator"
                     android:propertyName="fillColor"
                     android:startOffset="200"
-                    android:valueFrom="#ff0000"
-                    android:valueTo="#ff0000"
+                    android:valueFrom="#ffffff"
+                    android:valueTo="#ffffff"
                     android:valueType="colorType" />
                 <objectAnimator
                     android:duration="200"
