add haze fab and reconfigure size and position of chekcbox

--- a/app/src/main/res/drawable/unchecked.xml
+++ b/app/src/main/res/drawable/unchecked.xml
@@ -1,55 +1,13 @@
-<animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt">
-    <aapt:attr name="android:drawable">
-        <vector
-            android:name="vector"
-            android:width="26dp"
-            android:height="26dp"
-            android:viewportWidth="7"
-            android:viewportHeight="7">
-            <path
-                android:name="path_1"
-                android:fillColor="#ffffff"
-                android:fillType="evenOdd"
-                android:pathData="M 3.439 0 C 2.527 0 1.652 0.363 1.007 1.007 C 0.72 1.294 0.49 1.626 0.322 1.987 C 0.112 2.438 0 2.933 0 3.439 C 0 4.043 0.159 4.636 0.46 5.159 C 0.762 5.682 1.197 6.116 1.719 6.418 C 2.242 6.72 2.835 6.879 3.439 6.879 C 4.351 6.879 5.227 6.516 5.871 5.872 C 6.516 5.227 6.879 4.351 6.879 3.439 C 6.878 2.954 6.775 2.475 6.576 2.032 C 6.406 2.202 6.235 2.373 6.065 2.543 C 5.895 2.713 5.725 2.883 5.554 3.054 C 5.384 3.224 5.214 3.394 5.043 3.564 C 4.873 3.735 4.703 3.905 4.533 4.075 C 4.362 4.246 4.192 4.416 4.022 4.586 C 3.852 4.756 3.681 4.927 3.511 5.097 C 3.474 5.135 3.431 5.164 3.386 5.185 C 3.357 5.198 3.327 5.208 3.296 5.214 C 3.267 5.221 3.238 5.224 3.208 5.224 C 3.165 5.224 3.122 5.217 3.08 5.204 C 3.052 5.196 3.024 5.184 2.998 5.169 C 2.964 5.15 2.932 5.126 2.903 5.097 C 2.43 4.624 1.957 4.151 1.484 3.678 C 1.316 3.51 1.316 3.239 1.484 3.07 C 1.653 2.902 1.924 2.902 2.092 3.07 C 2.464 3.442 2.835 3.813 3.207 4.185 C 3.973 3.419 5.044 2.348 6.114 1.278 C 5.792 0.879 5.384 0.557 4.921 0.336 C 4.459 0.115 3.952 0 3.439 0 Z"
-                android:strokeWidth="1" />
-        </vector>
-    </aapt:attr>
-    <target android:name="path_1">
-        <aapt:attr name="android:animation">
-            <set>
-                <objectAnimator
-                    android:duration="200"
-                    android:interpolator="@android:anim/accelerate_interpolator"
-                    android:propertyName="pathData"
-                    android:valueFrom="M 3.439 0 C 2.527 0 1.652 0.363 1.007 1.007 C 0.72 1.294 0.49 1.626 0.322 1.987 C 0.112 2.438 0 2.933 0 3.439 C 0 4.043 0.159 4.636 0.46 5.159 C 0.762 5.682 1.197 6.116 1.719 6.418 C 2.242 6.72 2.835 6.879 3.439 6.879 C 4.351 6.879 5.227 6.516 5.871 5.872 C 6.516 5.227 6.879 4.351 6.879 3.439 C 6.878 2.954 6.775 2.475 6.576 2.032 C 6.406 2.202 6.235 2.373 6.065 2.543 C 5.895 2.713 5.725 2.883 5.554 3.054 C 5.384 3.224 5.214 3.394 5.043 3.564 C 4.873 3.735 4.703 3.905 4.533 4.075 C 4.362 4.246 4.192 4.416 4.022 4.586 C 3.852 4.756 3.681 4.927 3.511 5.097 C 3.474 5.135 3.431 5.164 3.386 5.185 C 3.357 5.198 3.327 5.208 3.296 5.214 C 3.267 5.221 3.238 5.224 3.208 5.224 C 3.165 5.224 3.122 5.217 3.08 5.204 C 3.052 5.196 3.024 5.184 2.998 5.169 C 2.964 5.15 2.932 5.126 2.903 5.097 C 2.43 4.624 1.957 4.151 1.484 3.678 C 1.316 3.51 1.316 3.239 1.484 3.07 C 1.653 2.902 1.924 2.902 2.092 3.07 C 2.464 3.442 2.835 3.813 3.207 4.185 C 3.973 3.419 5.044 2.348 6.114 1.278 C 5.792 0.879 5.384 0.557 4.921 0.336 C 4.459 0.115 3.952 0 3.439 0 Z"
-                    android:valueTo="M 3.439 0 C 2.527 0 1.652 0.363 1.007 1.007 C 0.72 1.294 0.49 1.626 0.322 1.987 C 0.112 2.438 0 2.933 0 3.439 C 0 4.043 0.159 4.636 0.46 5.159 C 0.762 5.682 1.197 6.116 1.719 6.418 C 2.242 6.72 2.835 6.879 3.439 6.879 C 4.351 6.879 5.227 6.516 5.871 5.872 C 6.516 5.227 6.879 4.351 6.879 3.439 C 6.878 2.954 6.775 2.475 6.576 2.032 C 6.406 2.202 6.235 2.373 6.065 2.543 C 5.895 2.713 5.725 2.883 5.554 3.054 C 5.384 3.224 5.214 3.394 5.043 3.564 C 4.873 3.735 4.703 3.905 4.533 4.075 C 4.362 4.246 4.192 4.416 4.022 4.586 C 3.852 4.756 3.681 4.927 3.511 5.097 C 3.474 5.135 3.431 5.164 3.386 5.185 C 3.357 5.198 3.327 5.208 3.296 5.214 C 3.267 5.221 3.238 5.224 3.208 5.224 C 3.165 5.224 3.122 5.217 3.08 5.204 C 3.052 5.196 3.024 5.184 2.998 5.169 C 2.964 5.15 2.932 5.126 2.903 5.097 C 2.861 5.055 2.829 5.007 2.808 4.955 C 2.787 4.903 2.776 4.848 2.776 4.793 C 2.776 4.738 2.787 4.683 2.808 4.632 C 2.829 4.58 2.861 4.531 2.903 4.489 C 3.973 3.419 5.044 2.348 6.114 1.278 C 5.792 0.879 5.384 0.557 4.921 0.336 C 4.459 0.115 3.952 0 3.439 0 Z"
-                    android:valueType="pathType" />
-                <objectAnimator
-                    android:duration="200"
-                    android:interpolator="@android:anim/decelerate_interpolator"
-                    android:propertyName="pathData"
-                    android:startOffset="200"
-                    android:valueFrom="M 3.439 0 C 2.527 0 1.652 0.363 1.007 1.007 C 0.362 1.652 0 2.528 0 3.439 C 0 4.043 0.159 4.636 0.46 5.159 C 0.762 5.682 1.197 6.116 1.719 6.418 C 2.242 6.72 2.835 6.879 3.439 6.879 C 4.351 6.879 5.227 6.516 5.871 5.872 C 6.516 5.227 6.879 4.351 6.879 3.439 C 6.878 2.954 6.775 2.475 6.576 2.032 C 5.554 3.054 4.533 4.075 3.511 5.097 C 3.343 5.266 3.071 5.266 2.903 5.097 C 2.734 4.929 2.734 4.658 2.903 4.489 C 3.973 3.419 5.044 2.348 6.114 1.278 C 5.792 0.879 5.384 0.557 4.921 0.336 C 4.459 0.115 3.952 0 3.439 0 Z"
-                    android:valueTo="M 3.439 0.529 C 2.928 0.529 2.426 0.664 1.984 0.919 C 1.542 1.175 1.174 1.542 0.919 1.985 C 0.663 2.427 0.529 2.929 0.529 3.44 C 0.529 4.211 0.836 4.952 1.381 5.498 C 1.927 6.043 2.668 6.35 3.439 6.35 C 4.211 6.35 4.952 6.043 5.497 5.498 C 6.043 4.952 6.35 4.211 6.35 3.44 C 6.35 3.338 6.345 3.236 6.334 3.135 C 6.323 3.034 6.307 2.934 6.286 2.834 C 6.265 2.735 6.239 2.637 6.207 2.541 C 6.176 2.445 6.14 2.35 6.098 2.257 C 6.057 2.164 6.011 2.073 5.96 1.985 C 5.704 1.542 5.337 1.175 4.894 0.919 C 4.452 0.664 3.95 0.529 3.439 0.529 Z"
-                    android:valueType="pathType" />
-                <objectAnimator
-                    android:duration="200"
-                    android:interpolator="@android:anim/accelerate_interpolator"
-                    android:propertyName="fillColor"
-                    android:startOffset="200"
-                    android:valueFrom="#ffffff"
-                    android:valueTo="#ffffff"
-                    android:valueType="colorType" />
-                <objectAnimator
-                    android:duration="200"
-                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-                    android:propertyName="pathData"
-                    android:startOffset="350"
-                    android:valueFrom="M 3.439 0.529 C 2.928 0.529 2.426 0.664 1.984 0.919 C 1.542 1.175 1.174 1.542 0.919 1.985 C 0.663 2.427 0.529 2.929 0.529 3.44 C 0.529 4.211 0.836 4.952 1.381 5.498 C 1.927 6.043 2.668 6.35 3.439 6.35 C 4.211 6.35 4.952 6.043 5.497 5.498 C 6.043 4.952 6.35 4.211 6.35 3.44 C 6.35 2.929 6.215 2.427 5.96 1.985 C 5.704 1.542 5.337 1.175 4.894 0.919 C 4.452 0.664 3.95 0.529 3.439 0.529 Z M 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 L 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44 C 3.439 3.44 3.439 3.44 3.439 3.44"
-                    android:valueTo="M 3.439 0.264 C 3.018 0.264 2.606 0.348 2.224 0.506 C 1.843 0.664 1.492 0.896 1.194 1.194 C 0.599 1.79 0.264 2.598 0.264 3.439 C 0.264 4.281 0.599 5.089 1.194 5.684 C 1.789 6.28 2.598 6.614 3.439 6.614 C 4.281 6.614 5.089 6.28 5.684 5.684 C 6.28 5.089 6.614 4.281 6.614 3.439 C 6.614 3.018 6.53 2.606 6.372 2.225 C 6.215 1.843 5.982 1.492 5.684 1.194 C 5.089 0.599 4.281 0.264 3.439 0.264 Z M 4.762 5.731 C 5.164 5.499 5.499 5.165 5.731 4.763 C 5.963 4.361 6.085 3.904 6.085 3.44 C 6.085 2.975 5.963 2.519 5.731 2.117 C 5.499 1.715 5.164 1.381 4.762 1.149 C 4.36 0.916 3.904 0.794 3.439 0.794 L 3.439 0.794 C 2.975 0.794 2.519 0.916 2.116 1.149 C 1.714 1.381 1.38 1.715 1.148 2.117 C 0.916 2.519 0.793 2.975 0.793 3.44 C 0.793 3.904 0.916 4.361 1.148 4.763 C 1.38 5.165 1.714 5.499 2.116 5.731 C 2.519 5.964 2.975 6.086 3.439 6.086 C 3.904 6.086 4.36 5.964 4.762 5.731"
-                    android:valueType="pathType" />
-            </set>
-        </aapt:attr>
-    </target>
-</animated-vector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector_end_state"
+    android:width="26dp"
+    android:height="26dp"
+    android:viewportWidth="7"
+    android:viewportHeight="7">
+    <path
+        android:name="path_1"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"
+        android:pathData="M 3.439 0.264 C 3.018 0.264 2.606 0.348 2.224 0.506 C 1.843 0.664 1.492 0.896 1.194 1.194 C 0.599 1.79 0.264 2.598 0.264 3.439 C 0.264 4.281 0.599 5.089 1.194 5.684 C 1.789 6.28 2.598 6.614 3.439 6.614 C 4.281 6.614 5.089 6.28 5.684 5.684 C 6.28 5.089 6.614 4.281 6.614 3.439 C 6.614 3.018 6.53 2.606 6.372 2.225 C 6.215 1.843 5.982 1.492 5.684 1.194 C 5.089 0.599 4.281 0.264 3.439 0.264 Z M 4.762 5.731 C 5.164 5.499 5.499 5.165 5.731 4.763 C 5.963 4.361 6.085 3.904 6.085 3.44 C 6.085 2.975 5.963 2.519 5.731 2.117 C 5.499 1.715 5.164 1.381 4.762 1.149 C 4.36 0.916 3.904 0.794 3.439 0.794 L 3.439 0.794 C 2.975 0.794 2.519 0.916 2.116 1.149 C 1.714 1.381 1.38 1.715 1.148 2.117 C 0.916 2.519 0.793 2.975 0.793 3.44 C 0.793 3.904 0.916 4.361 1.148 4.763 C 1.38 5.165 1.714 5.499 2.116 5.731 C 2.519 5.964 2.975 6.086 3.439 6.086 C 3.904 6.086 4.36 5.964 4.762 5.731"
+        android:strokeWidth="1" />
+</vector>
